orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/Agent_Interaction__c.object-meta.xml
<CustomObject>
    <description>Central observability log for all MCP agent interactions in the insurance claims platform. Every tool invocation through the MCP Gateway creates one record here for auditing, debugging, compliance and analytics purposes.</description>
    <label>Agent Interaction</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>