orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>Name of the Agentforce agent that triggered this</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>