orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Confidence score returned by the agent</description>
    <label>Confidence Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>