orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Decision returned: Approve, Review or Reject</description>
    <label>Decision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>