orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Duration_MS__c.field-meta.xml
<CustomField>
    <fullName>Duration_MS__c</fullName>
    <description>Total milliseconds for the MCP round trip</description>
    <label>Duration MS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>