orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <description>Interaction Status</description>
    <label>Interaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>