orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Interaction_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Timestamp__c</fullName>
    <description>Exact date and time this MCP interaction occurred</description>
    <label>Interaction Timestamp</label>
    <type>DateTime</type>
</CustomField>