orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>Full JSON payload sent to the MCP agent server</description>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>