orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>Full JSON response received from the MCP agent server</description>
    <label>Response Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>