orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Server_Name__c.field-meta.xml
<CustomField>
    <fullName>Server_Name__c</fullName>
    <description>The MCP agent server that handled this request</description>
    <label>Server Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>