orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>HTTP status code returned e.g. 200, 400, 500</description>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>