orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the MCP invocation was successful</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>