orgs/claim-core/force-app/main/default/objects/Agent_Interaction__c/fields/Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_Name__c</fullName>
    <description>The MCP tool invoked e.g. estimate_claim</description>
    <label>Tool Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>